Fixed text wrap in tweet-text by adding overflow-auto to article.tweet main

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -56,6 +56,7 @@ article .userHandle {
 }
 
 article.tweet main {
+  overflow: auto;
   margin-top: 45px;
   border-bottom: 4px solid #545149;
 }
